[FIX] account_reports: progress bar text is now black so it's visible all the time

--- a/account_reports/static/src/less/account_financial_report.less
+++ b/account_reports/static/src/less/account_financial_report.less
@@ -163,3 +163,7 @@
         }
     }
 }
+
+.o_account-progress-bar-content {
+    color: black;
+}
